trying nginx to serve at info.iea-ne.us

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ volumes:
   mysql-data:
   shiny-apps:
   wordpress-html:
+  nginx-html:
 
 services:
 
@@ -129,4 +130,15 @@ services:
     ports:
       - 8787:8787
       - 3838:3838
+      
+  nginx:
+    container_name: nginx
+    build: ./nginx
+    volumes:
+      - nginx-html:/usr/share/nginx/html
+    restart: unless-stopped
+    environment:
+      VIRTUAL_HOST: info.$HOST
+    ports:
+      - 8088:80
 
