--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,5 +1,5 @@
 FROM nginx
 
-# install infographic
+# install infographic site from Github
 RUN cd /usr/share/nginx && rm -rf html && \
     git clone https://github.com/marinebon/iea-ne_info.git html
