try explicit naming and port 8080 on erddap

--- a/erddap/Dockerfile
+++ b/erddap/Dockerfile
@@ -2,5 +2,5 @@ FROM axiom/docker-erddap:latest
 
 # install erddap config files
 WORKDIR /usr/local/tomcat/content/erddap
-COPY setup.xml .
-COPY datasets.xml .
+COPY setup.xml setup.xml
+COPY datasets.xml datasets.xml
