+ dep of nginx-proxy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,8 @@ services:
       - geoserver
       - wordpress
       - rstudio-shiny
+      - nginx
+      - erddap
 
   postgis:
     container_name: postgis
