on: erddap; off: wp, gs, pg for memory

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,8 @@ services:
     image: jwilder/nginx-proxy
     env_file: .env
     environment:
-      DEFAULT_HOST: wp.$HOST
+      # DEFAULT_HOST: wp.$HOST
+      DEFAULT_HOST: info.$HOST
       VIRTUAL_HOST_SPECIFIC_PORT: 'true'
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
@@ -29,94 +30,94 @@ services:
       # TODO: add https
       #- 443:443
     depends_on:
-      - geoserver
-      - wordpress
+      # - geoserver
+      # - wordpress
       - rstudio-shiny
       - nginx
       - erddap
 
-  postgis:
-    container_name: postgis
-    image: kartoza/postgis:11.0-2.5
-    environment:
-      POSTGRES_DBNAME: gis
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: $PASSWORD
-    volumes:
-      - postgis-data:/var/lib/postgresql
-    restart: unless-stopped
-    healthcheck:
-      test: 'exit 0'
-    ports:
-      - 5432:5432
-
-  postgis-backup:
-    container_name: postgis-backup
-    image: kartoza/pg-backup:11.0
-    volumes:
-      - postgis-backups:/backups
-    environment:
-      POSTGRES_HOST: db
-      POSTGRES_PORT: 5432
-      POSTGRES_DBNAME: gis
-      POSTGRES_USER: admin
-      POSTGRES_PASS: $PASSWORD
-      DUMPPREFIX: PG_gis
-    restart: unless-stopped
-    depends_on:
-      - postgis
-
-  geoserver:
-    container_name: geoserver
-    image: kartoza/geoserver:2.15.2
-    environment:
-      VIRTUAL_HOST: gs.$HOST
-      USERNAME: admin
-      PASS: $PASSWORD
-      GEOSERVER_ADMIN_PASSWORD: $PASSWORD
-    volumes:
-      - geoserver-data:/opt/geoserver/data_dir
-    ports:
-      - 8888:8080
-    restart: unless-stopped
-    depends_on:
-      - postgis
-    healthcheck:
-      test: curl --fail -s http://localhost:8888/ || exit 1
-      interval: 1m30s
-      timeout: 10s
-      retries: 3
-
-  mysql:
-    container_name: mysql
-    image: mysql:8.0.18
-    volumes:
-      - mysql-data:/var/lib/mysql
-    restart: unless-stopped
-    environment:
-      MYSQL_ROOT_PASSWORD: $PASSWORD
-      MYSQL_DATABASE: wordpress
-      MYSQL_USER: admin
-      MYSQL_PASSWORD: $PASSWORD
-    ports:
-      - 3306:3306
-
-  wordpress:
-    container_name: wordpress
-    depends_on:
-      - mysql
-    image: wordpress:php7.4-apache
-    ports:
-      - 8000:80
-    volumes:
-      - wordpress-html:/var/www/html      
-    restart: unless-stopped
-    environment:
-      VIRTUAL_HOST: wp.$HOST
-      WORDPRESS_DB_HOST: mysql:3306
-      WORDPRESS_DB_USER: admin
-      WORDPRESS_DB_PASSWORD: $PASSWORD
-      WORDPRESS_DB_NAME: wordpress
+  # postgis:
+  #   container_name: postgis
+  #   image: kartoza/postgis:11.0-2.5
+  #   environment:
+  #     POSTGRES_DBNAME: gis
+  #     POSTGRES_USER: admin
+  #     POSTGRES_PASSWORD: $PASSWORD
+  #   volumes:
+  #     - postgis-data:/var/lib/postgresql
+  #   restart: unless-stopped
+  #   healthcheck:
+  #     test: 'exit 0'
+  #   ports:
+  #     - 5432:5432
+  #
+  # postgis-backup:
+  #   container_name: postgis-backup
+  #   image: kartoza/pg-backup:11.0
+  #   volumes:
+  #     - postgis-backups:/backups
+  #   environment:
+  #     POSTGRES_HOST: db
+  #     POSTGRES_PORT: 5432
+  #     POSTGRES_DBNAME: gis
+  #     POSTGRES_USER: admin
+  #     POSTGRES_PASS: $PASSWORD
+  #     DUMPPREFIX: PG_gis
+  #   restart: unless-stopped
+  #   depends_on:
+  #     - postgis
+  #
+  # geoserver:
+  #   container_name: geoserver
+  #   image: kartoza/geoserver:2.15.2
+  #   environment:
+  #     VIRTUAL_HOST: gs.$HOST
+  #     USERNAME: admin
+  #     PASS: $PASSWORD
+  #     GEOSERVER_ADMIN_PASSWORD: $PASSWORD
+  #   volumes:
+  #     - geoserver-data:/opt/geoserver/data_dir
+  #   ports:
+  #     - 8888:8080
+  #   restart: unless-stopped
+  #   depends_on:
+  #     - postgis
+  #   healthcheck:
+  #     test: curl --fail -s http://localhost:8888/ || exit 1
+  #     interval: 1m30s
+  #     timeout: 10s
+  #     retries: 3
+  #
+  # mysql:
+  #   container_name: mysql
+  #   image: mysql:8.0.18
+  #   volumes:
+  #     - mysql-data:/var/lib/mysql
+  #   restart: unless-stopped
+  #   environment:
+  #     MYSQL_ROOT_PASSWORD: $PASSWORD
+  #     MYSQL_DATABASE: wordpress
+  #     MYSQL_USER: admin
+  #     MYSQL_PASSWORD: $PASSWORD
+  #   ports:
+  #     - 3306:3306
+  #
+  # wordpress:
+  #   container_name: wordpress
+  #   depends_on:
+  #     - mysql
+  #   image: wordpress:php7.4-apache
+  #   ports:
+  #     - 8000:80
+  #   volumes:
+  #     - wordpress-html:/var/www/html
+  #   restart: unless-stopped
+  #   environment:
+  #     VIRTUAL_HOST: wp.$HOST
+  #     WORDPRESS_DB_HOST: mysql:3306
+  #     WORDPRESS_DB_USER: admin
+  #     WORDPRESS_DB_PASSWORD: $PASSWORD
+  #     WORDPRESS_DB_NAME: wordpress
 
   rstudio-shiny:
     container_name: rstudio-shiny
@@ -134,7 +135,7 @@ services:
     ports:
       - 8787:8787
       - 3838:3838
-      
+
   nginx:
     container_name: nginx
     build: ./nginx
@@ -144,8 +145,9 @@ services:
     environment:
       VIRTUAL_HOST: info.$HOST
     ports:
-      - 8088:80
+      - 80:80
 
+  # docker run -d -p 8080:8080 --name erddap axiom/docker-erddap
   # sudo docker exec -it erddap bash -c "cd webapps/erddap/WEB-INF/ && bash GenerateDatasetsXml.sh -verbose"
   erddap:
     container_name: erddap
