--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3.3'
 
 volumes:
-  postgis-backups:
-  geoserver-data:
-  postgis-data:
-  mysql-data:
-  wordpress-html:
+  # postgis-backups:
+  # geoserver-data:
+  # postgis-data:
+  # mysql-data:
+  # wordpress-html:
   shiny-apps:
   #erddap-data:
   #erddap-config:
@@ -30,94 +30,94 @@ services:
       # TODO: add https
       #- 443:443
     depends_on:
-      - geoserver
-      - wordpress
+      # - geoserver
+      # - wordpress
       - rstudio-shiny
       - nginx
       - erddap
 
-  postgis:
-    container_name: postgis
-    image: kartoza/postgis:11.0-2.5
-    environment:
-      POSTGRES_DBNAME: gis
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: $PASSWORD
-    volumes:
-      - postgis-data:/var/lib/postgresql
-    restart: unless-stopped
-    healthcheck:
-      test: 'exit 0'
-    ports:
-      - 5432:5432
-
-  postgis-backup:
-    container_name: postgis-backup
-    image: kartoza/pg-backup:11.0
-    volumes:
-      - postgis-backups:/backups
-    environment:
-      POSTGRES_HOST: db
-      POSTGRES_PORT: 5432
-      POSTGRES_DBNAME: gis
-      POSTGRES_USER: admin
-      POSTGRES_PASS: $PASSWORD
-      DUMPPREFIX: PG_gis
-    restart: unless-stopped
-    depends_on:
-      - postgis
-
-  geoserver:
-    container_name: geoserver
-    image: kartoza/geoserver:2.15.2
-    environment:
-      VIRTUAL_HOST: gs.$HOST
-      USERNAME: admin
-      PASS: $PASSWORD
-      GEOSERVER_ADMIN_PASSWORD: $PASSWORD
-    volumes:
-      - geoserver-data:/opt/geoserver/data_dir
-    ports:
-      - 8888:8080
-    restart: unless-stopped
-    depends_on:
-      - postgis
-    healthcheck:
-      test: curl --fail -s http://localhost:8888/ || exit 1
-      interval: 1m30s
-      timeout: 10s
-      retries: 3
-
-  mysql:
-    container_name: mysql
-    image: mysql:8.0.18
-    volumes:
-      - mysql-data:/var/lib/mysql
-    restart: unless-stopped
-    environment:
-      MYSQL_ROOT_PASSWORD: $PASSWORD
-      MYSQL_DATABASE: wordpress
-      MYSQL_USER: admin
-      MYSQL_PASSWORD: $PASSWORD
-    ports:
-      - 3306:3306
-
-  wordpress:
-    container_name: wordpress
-    depends_on:
-      - mysql
-    image: wordpress:php7.4-apache
-    ports:
-      - 8000:80
-    volumes:
-      - wordpress-html:/var/www/html
-    restart: unless-stopped
-    environment:
-      VIRTUAL_HOST: wp.$HOST
-      WORDPRESS_DB_HOST: mysql:3306
-      WORDPRESS_DB_USER: admin
-      WORDPRESS_DB_PASSWORD: $PASSWORD
-      WORDPRESS_DB_NAME: wordpress
+  # postgis:
+  #   container_name: postgis
+  #   image: kartoza/postgis:11.0-2.5
+  #   environment:
+  #     POSTGRES_DBNAME: gis
+  #     POSTGRES_USER: admin
+  #     POSTGRES_PASSWORD: $PASSWORD
+  #   volumes:
+  #     - postgis-data:/var/lib/postgresql
+  #   restart: unless-stopped
+  #   healthcheck:
+  #     test: 'exit 0'
+  #   ports:
+  #     - 5432:5432
+  #
+  # postgis-backup:
+  #   container_name: postgis-backup
+  #   image: kartoza/pg-backup:11.0
+  #   volumes:
+  #     - postgis-backups:/backups
+  #   environment:
+  #     POSTGRES_HOST: db
+  #     POSTGRES_PORT: 5432
+  #     POSTGRES_DBNAME: gis
+  #     POSTGRES_USER: admin
+  #     POSTGRES_PASS: $PASSWORD
+  #     DUMPPREFIX: PG_gis
+  #   restart: unless-stopped
+  #   depends_on:
+  #     - postgis
+  #
+  # geoserver:
+  #   container_name: geoserver
+  #   image: kartoza/geoserver:2.15.2
+  #   environment:
+  #     VIRTUAL_HOST: gs.$HOST
+  #     USERNAME: admin
+  #     PASS: $PASSWORD
+  #     GEOSERVER_ADMIN_PASSWORD: $PASSWORD
+  #   volumes:
+  #     - geoserver-data:/opt/geoserver/data_dir
+  #   ports:
+  #     - 8888:8080
+  #   restart: unless-stopped
+  #   depends_on:
+  #     - postgis
+  #   healthcheck:
+  #     test: curl --fail -s http://localhost:8888/ || exit 1
+  #     interval: 1m30s
+  #     timeout: 10s
+  #     retries: 3
+  #
+  # mysql:
+  #   container_name: mysql
+  #   image: mysql:8.0.18
+  #   volumes:
+  #     - mysql-data:/var/lib/mysql
+  #   restart: unless-stopped
+  #   environment:
+  #     MYSQL_ROOT_PASSWORD: $PASSWORD
+  #     MYSQL_DATABASE: wordpress
+  #     MYSQL_USER: admin
+  #     MYSQL_PASSWORD: $PASSWORD
+  #   ports:
+  #     - 3306:3306
+  #
+  # wordpress:
+  #   container_name: wordpress
+  #   depends_on:
+  #     - mysql
+  #   image: wordpress:php7.4-apache
+  #   ports:
+  #     - 8000:80
+  #   volumes:
+  #     - wordpress-html:/var/www/html
+  #   restart: unless-stopped
+  #   environment:
+  #     VIRTUAL_HOST: wp.$HOST
+  #     WORDPRESS_DB_HOST: mysql:3306
+  #     WORDPRESS_DB_USER: admin
+  #     WORDPRESS_DB_PASSWORD: $PASSWORD
+  #     WORDPRESS_DB_NAME: wordpress
 
   rstudio-shiny:
     container_name: rstudio-shiny
@@ -159,4 +159,4 @@ services:
     environment:
       VIRTUAL_HOST: erddap.$HOST
     ports:
-      - 8008:8080
+      - 8080:8080
