--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ volumes:
   mysql-data:
   wordpress-html:
   shiny-apps:
-  #erddap-data:
-  #erddap-config:
+  erddap-data:
+  erddap-config:
   nginx-html:
 
 services:
@@ -34,7 +34,7 @@ services:
       - wordpress
       - rstudio-shiny
       - nginx
-      #- erddap
+      - erddap
 
   postgis:
     container_name: postgis
@@ -149,14 +149,14 @@ services:
 
   # docker run -d -p 8080:8080 --name erddap axiom/docker-erddap
   # sudo docker exec -it erddap bash -c "cd webapps/erddap/WEB-INF/ && bash GenerateDatasetsXml.sh -verbose"
-  # erddap:
-  #   container_name: erddap
-  #   build: ./erddap
-  #   # volumes:
-  #   #  - erddap-data:/erddapData
-  #   #  - erddap-config:/usr/local/tomcat/content/erddap
-  #   restart: unless-stopped
-  #   environment:
-  #     VIRTUAL_HOST: erddap.$HOST
-  #   ports:
-  #     - 8080:8080
+  erddap:
+    container_name: erddap
+    build: ./erddap
+    volumes:
+     - erddap-data:/erddapData
+     - erddap-config:/usr/local/tomcat/content/erddap
+    restart: unless-stopped
+    environment:
+      VIRTUAL_HOST: erddap.$HOST
+    ports:
+      - 8080:8080
