--- a/erddap/Dockerfile
+++ b/erddap/Dockerfile
@@ -7,4 +7,4 @@ COPY setenv.sh ${CATALINA_HOME}/bin/setenv.sh
 WORKDIR /usr/local/tomcat/content/erddap
 COPY setup.xml setup.xml
 COPY datasets.xml datasets.xml
-
+COPY data/iea-ne/ex-chl-ppd/M_201901-MODISA-NESGRID-CHLOR_A.nc /erddapData/iea-ne/ex-chl-ppd/M_201901-MODISA-NESGRID-CHLOR_A.nc
