https w/ erddap and nginx for www

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,64 @@
 version: '3.3'
 
 volumes:
+  nginx-conf:
+  nginx-certs:
+  nginx-vhost:
+  nginx-html:
+  share:
   postgis-backups:
   geoserver-data:
   postgis-data:
-  mysql-data:
-  wordpress-html:
+  #mysql-data:
+  #wordpress-html:
   shiny-apps:
   erddap-data:
   erddap-config:
-  nginx-html:
 
 services:
 
   nginx-proxy:
-    container_name: proxy
+    container_name: nginx-proxy
     image: jwilder/nginx-proxy
     env_file: .env
+    labels:
+      - "com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy=true" # Label needed for Let's Encrypt companion container
     environment:
-      DEFAULT_HOST: wp.$HOST
-      # DEFAULT_HOST: info.$HOST
+      DEFAULT_HOST: www.$HOST
       VIRTUAL_HOST_SPECIFIC_PORT: 'true'
+      VIRTUAL_PROTO: https
+      VIRTUAL_PORT: 443
+      DHPARAM_GENERATION: 'false'
     volumes:
-      - /var/run/docker.sock:/tmp/docker.sock:ro
-      - ./nginx-proxy/nginx.tmpl:/app/nginx.tmpl:ro
+      - "/var/run/docker.sock:/tmp/docker.sock:ro"
+      - "./nginx-proxy/nginx.tmpl:/app/nginx.tmpl:ro"
+      - "nginx-conf:/etc/nginx/conf.d"
+      - "nginx-certs:/etc/nginx/certs:ro"
+      - "nginx-dhparam:/etc/nginx/dhparam"
+      - "nginx-vhost:/etc/nginx/vhost.d"
+      - "nginx-html:/usr/share/nginx/html"
     restart: unless-stopped
     ports:
       - 80:80
-      # TODO: add https
-      #- 443:443
-    depends_on:
-      - geoserver
-      - wordpress
-      - rstudio-shiny
-      - nginx
-      - erddap
+      - 443:443
+
+  # https://cloud.google.com/community/tutorials/nginx-reverse-proxy-docker
+  letsencrypt-nginx-proxy-companion:
+    image: jrcs/letsencrypt-nginx-proxy-companion
+    restart: always
+    container_name: letsencrypt-nginx-proxy-companion
+    environment:
+      DEFAULT_EMAIL: 'ben@ecoquants.com' 
+    volumes:
+     - "/var/run/docker.sock:/var/run/docker.sock:ro"
+     - "nginx-conf:/etc/nginx/conf.d"
+     - "nginx-certs:/etc/nginx/certs:rw"
+     - "nginx-dhparam:/etc/nginx/dhparam"
+     - "nginx-vhost:/etc/nginx/vhost.d"
+     - "nginx-html:/usr/share/nginx/html"
+    # Make sure we start nginx proxy container first
+    depends_on: 
+     - nginx-proxy
 
   postgis:
     container_name: postgis
@@ -45,17 +69,21 @@ services:
       POSTGRES_PASSWORD: $PASSWORD
     volumes:
       - postgis-data:/var/lib/postgresql
+      - share:/share      
     restart: unless-stopped
     healthcheck:
       test: 'exit 0'
     ports:
       - 5432:5432
-
+    depends_on: 
+     - nginx-proxy
+     
   postgis-backup:
     container_name: postgis-backup
     image: kartoza/pg-backup:11.0
     volumes:
       - postgis-backups:/backups
+      - share:/share      
     environment:
       POSTGRES_HOST: db
       POSTGRES_PORT: 5432
@@ -77,6 +105,7 @@ services:
       GEOSERVER_ADMIN_PASSWORD: $PASSWORD
     volumes:
       - geoserver-data:/opt/geoserver/data_dir
+      - share:/share    
     ports:
       - 8888:8080
     restart: unless-stopped
@@ -87,37 +116,53 @@ services:
       interval: 1m30s
       timeout: 10s
       retries: 3
+    depends_on: 
+     - nginx-proxy
 
-  mysql:
-    container_name: mysql
-    image: mysql:8.0.18
+  # mysql:
+  #   container_name: mysql
+  #   image: mysql:8.0.18
+  #   volumes:
+  #     - mysql-data:/var/lib/mysql
+  #   restart: unless-stopped
+  #   environment:
+  #     MYSQL_ROOT_PASSWORD: $PASSWORD
+  #     MYSQL_DATABASE: wordpress
+  #     MYSQL_USER: admin
+  #     MYSQL_PASSWORD: $PASSWORD
+  #   ports:
+  #     - 3306:3306
+
+  # wordpress:
+  #   container_name: wordpress
+  #   depends_on:
+  #     - mysql
+  #   image: wordpress:php7.4-apache
+  #   ports:
+  #     - 8000:80
+  #   volumes:
+  #     - wordpress-html:/var/www/html
+  #   restart: unless-stopped
+  #   environment:
+  #     VIRTUAL_HOST: wp.$HOST
+  #     WORDPRESS_DB_HOST: mysql:3306
+  #     WORDPRESS_DB_USER: admin
+  #     WORDPRESS_DB_PASSWORD: $PASSWORD
+  #     WORDPRESS_DB_NAME: wordpress
+  
+  nginx:
+    container_name: nginx
+    build: ./nginx
     volumes:
-      - mysql-data:/var/lib/mysql
+    # - nginx-html:/usr/share/nginx/html
+      - "share:/share"
     restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: $PASSWORD
-      MYSQL_DATABASE: wordpress
-      MYSQL_USER: admin
-      MYSQL_PASSWORD: $PASSWORD
+      VIRTUAL_HOST: www.$HOST
     ports:
-      - 3306:3306
-
-  wordpress:
-    container_name: wordpress
-    depends_on:
-      - mysql
-    image: wordpress:php7.4-apache
-    ports:
-      - 8000:80
-    volumes:
-      - wordpress-html:/var/www/html
-    restart: unless-stopped
-    environment:
-      VIRTUAL_HOST: wp.$HOST
-      WORDPRESS_DB_HOST: mysql:3306
-      WORDPRESS_DB_USER: admin
-      WORDPRESS_DB_PASSWORD: $PASSWORD
-      WORDPRESS_DB_NAME: wordpress
+      - 8088:80
+    depends_on: 
+     - nginx-proxy
 
   rstudio-shiny:
     container_name: rstudio-shiny
@@ -135,17 +180,8 @@ services:
     ports:
       - 8787:8787
       - 3838:3838
-
-  nginx:
-    container_name: nginx
-    build: ./nginx
-    volumes:
-     - nginx-html:/usr/share/nginx/html
-    restart: unless-stopped
-    environment:
-      VIRTUAL_HOST: info.$HOST
-    ports:
-      - 8088:80
+    depends_on: 
+     - nginx-proxy
 
   # docker run -d -p 8080:8080 --name erddap axiom/docker-erddap
   erddap:
@@ -154,10 +190,14 @@ services:
     volumes:
      - erddap-data:/erddapData
      - erddap-config:/usr/local/tomcat/content/erddap
+     - share:/share     
     restart: unless-stopped
     environment:
       VIRTUAL_HOST: erddap.$HOST
     ports:
       - 8080:8080
+    depends_on: 
+     - nginx-proxy
+      
  # sudo docker exec -it erddap bash -c "cd /usr/local/tomcat/webapps/erddap/WEB-INF && bash GenerateDatasetsXml.sh -verbose"
   
