--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,30 +96,30 @@ services:
     depends_on:
       - postgis
 
-  # geoserver:
-  #   container_name: geoserver
-  #   image: kartoza/geoserver:2.15.2
-  #   environment:
-  #     VIRTUAL_HOST: gs.$HOST
-  #     LETSENCRYPT_HOST: gs.$HOST
-  #     USERNAME: admin
-  #     PASS: $PASSWORD
-  #     GEOSERVER_ADMIN_PASSWORD: $PASSWORD
-  #   volumes:
-  #     - geoserver-data:/opt/geoserver/data_dir
-  #     - share:/share    
-  #   ports:
-  #     - 8888:8080
-  #   restart: unless-stopped
-  #   depends_on:
-  #     - postgis
-  #   healthcheck:
-  #     test: curl --fail -s http://localhost:8888/ || exit 1
-  #     interval: 1m30s
-  #     timeout: 10s
-  #     retries: 3
-  #   depends_on: 
-  #    - nginx-proxy
+  geoserver:
+    container_name: geoserver
+    image: kartoza/geoserver:2.15.2
+    environment:
+      VIRTUAL_HOST: gs.$HOST
+      LETSENCRYPT_HOST: gs.$HOST
+      USERNAME: admin
+      PASS: $PASSWORD
+      GEOSERVER_ADMIN_PASSWORD: $PASSWORD
+    volumes:
+      - geoserver-data:/opt/geoserver/data_dir
+      - share:/share
+    ports:
+      - 8888:8080
+    restart: unless-stopped
+    depends_on:
+      - postgis
+    healthcheck:
+      test: curl --fail -s http://localhost:8888/ || exit 1
+      interval: 1m30s
+      timeout: 10s
+      retries: 3
+    depends_on:
+     - nginx-proxy
 
   # mysql:
   #   container_name: mysql
@@ -177,7 +177,7 @@ services:
     restart: unless-stopped
     environment:
       # [Running virtual hosts on different ports of the same container · Issue #560 · jwilder/nginx-proxy](https://github.com/jwilder/nginx-proxy/issues/560)
-      VIRTUAL_HOST: "rstudio.$HOST:8787,shiny.$HOST:3838"
+      VIRTUAL_HOST: "rstudio.$HOST:8787,shiny.$HOST:3838,api.$HOST:8888"
       LETSENCRYPT_HOST: "rstudio.$HOST,shiny.$HOST,api.$HOST"
       ROOT: 'true'
       USER: admin
@@ -185,6 +185,7 @@ services:
     ports:
       - 8787:8787
       - 3838:3838
+      - 8888:8888
     depends_on: 
      - nginx-proxy
 
