--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,8 +1,8 @@
 FROM nginx:stable
 
-
-
 # install infographic site from Github
 RUN apt-get update; apt-get --assume-yes install git
-RUN cd /usr/share/nginx && rm -rf html && \
-    git clone https://github.com/marinebon/iea-ne_info.git html
+RUN mkdir /share/github && cd /share/github && \
+  git clone https://github.com/marinebon/iea-ne_info.git \
+  mv /usr/share/nginx/html /usr/share/nginx/html_0 \
+  ln -s iea-ne_info /usr/share/nginx/html
