--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -175,6 +175,7 @@ services:
     volumes:
       - shiny-apps:/srv/shiny-server
       - share:/share
+    entrypoint: /docker-start.sh
     restart: unless-stopped
     environment:
       # [Running virtual hosts on different ports of the same container · Issue #560 · jwilder/nginx-proxy](https://github.com/jwilder/nginx-proxy/issues/560)
