--- a/rstudio-shiny/Dockerfile
+++ b/rstudio-shiny/Dockerfile
@@ -42,11 +42,11 @@ RUN install2.r --error \
 RUN export ADD=shiny && bash /etc/cont-init.d/add
 
 RUN mkdir -p /share/github
-cd /share/github
+WORKDIR /share/github
 
-RUN if [ ! -d "/share/github/iea-uploader" ] ; then \
+RUN if [ ! -d "iea-uploader" ] ; then \
   git clone https://github.com/marinebon/iea-uploader.git ; \
-  ln -s /share/github/iea-uploader /srv/shiny-server/uploader ; fi \
-RUN if [ ! -d "/share/github/edna-vis" ] ; then \
+  ln -s iea-uploader /srv/shiny-server/uploader ; fi \
+RUN if [ ! -d "edna-vis" ] ; then \
   git clone https://github.com/marinebon/edna-vis.git ; \
-  ln -s /share/github/edna-vis /srv/shiny-server/edna-vis ; fi \
+  ln -s edna-vis /srv/shiny-server/edna-vis ; fi \
